# arrowhead

./: .gitignore  README.md  main.py  pyproject.toml
examples/: Untitled.canvas:com.dropbox.attrs  something.md:com.dropbox.attrs
examples/.obsidian/: app.json:com.dropbox.attrs  appearance.json:com.dropbox.attrs  core-plugins.json:com.dropbox.attrs  daily-notes.json:com.dropbox.attrs  graph.json  graph.json:com.dropbox.attrs  templates.json:com.dropbox.attrs  workspace.json  workspace.json:com.dropbox.attrs
examples/journal/: 2024-12-02.md
src/arrowhead/: __init__.py  batcher.py  cli.py  parser.py  rag.py  scanner.py  summarizer.py  utils.py  writer.py
src/arrowhead/mcp/: agent.py  server.py  tools.py
tests/: conftest.py  test_batcher.py  test_cli.py  test_rag.py  test_scanner.py  test_summarizer.py  test_summarizer_integration.py
