[project]
name = "arrowhead"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "openai>=1.91.0",
    "pendulum>=3.1.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.scripts]
arrowhead = "arrowhead.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--strict-markers"
markers = [
    "integration: mark test as integration test"
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
